--- a/index.html
+++ b/index.html
@@ -29,18 +29,10 @@
         <li><a href="./Lab1/Lab1_5.html">Lab1_5</a></li>
     </ol>
     <h2>
-        Лабораторные работы №2
-    </h2>
-    <ol>
-        <li><a href="./Lab2/Lab2_1/test.html">Test</a></li>
-        <li><a href="./Lab2/Lab2_1/Lab2_1.html">Lab2_1</a></li>
-        <li><a href="./Lab2/Lab2_1/Lab2_2.html">Lab2_2</a></li>
-        <li><a href="./Lab2/Lab2_1/Lab2_3.html">Lab2_3</a></li>
-        <li><a href="./Lab2/Lab2_1/Lab2_4.html">Lab2_4</a></li>
-        <li><a href="./Lab2/Lab2_1/Lab2_5.html">Lab2_5</a></li>
-        <li><a href="./Lab2/Lab2_1/Lab2_6.html">Lab2_6</a></li>
-        <li><a href="./Lab2/Lab2_1/Lab2_7.html">Lab2_7</a></li>
-        <li><a href="./Lab2/Lab2_1/Lab2_8.html">Lab2_8</a></li>
+        <h2>Лабораторная работа № 2</h2>
+        <ul>
+            <li><a href="l2/l2_1.html">Задание 1</a></li>
+        </ul>
     </ol>
     <h2>
     Лабораторные работы №3
