--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <h2>
         <h2>Лабораторная работа № 2</h2>
         <ul>
-            <li><a href="l2/l2_1.html">Задание 1</a></li>
+            <li><a href="Lab2/Lab2_1.html">Задание 1</a></li>
         </ul>
     </ol>
     <h2>
