--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     Лабораторные работы №3
 </h2>
 <ol>
-    <li><a href="./Lab3/lab3.html">Lab3</a></li>
+    <li><a href="./Lab3/Lab3.html">Lab3</a></li>
 </ol>
 <h2>
 Лабораторные работы №4
