--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 Лабораторные работы №4
 </h2>
 <ol>
-    <li><a href="./Lab4/lab4.html">Lab4</a></li>
+    <li><a href="./Lab4/Lab4.html">Lab4</a></li>
 </ol>
 <h2>
     Лабораторные работы №5
