--- a/Lab1/Lab1_3.html
+++ b/Lab1/Lab1_3.html
@@ -31,7 +31,7 @@
     <h1>Страница "Ввод числа"</h1>
     <p>Нажмите на ссылку ниже, чтобы перейти на главную страницу</p>
     
-    <a href="https://serega24-41.github.io/javascript/" id="numberLink">Получить число</a>
+    <a href="https://zifurka.github.io/javascript/" id="numberLink">Получить число</a>
 
     <script>
         "use strict";
