--- a/Lab4/Lab4.html
+++ b/Lab4/Lab4.html
@@ -1,24 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Навигация lab4</title>
-
-    
-
-
+    <title>Lab 4</title>
 </head>
-
 <body>
-
-    <h1>Лабораторная работа 4</h1>
-    <hr>
-    <p style="text-align: center;">Результаты в консоли.
+    <h1>Lab 4</h1>
+    <p>Open the console to see the results.</p>
 
     <script src="lab4.js"></script>
 </body>
-
 </html>
