--- a/Lab1/Lab1_2.html
+++ b/Lab1/Lab1_2.html
@@ -8,18 +8,21 @@
 
     <h1>Считать ворон</h1>
 
-    <form id="crowForm"> onsubmit="handleSumbit(event)">
+    <form id="crowForm" onsubmit="handleSubmit(event)">
         <label for="num">Количество ворон:</label>
         <input type="number" id="num" name="num" min="0" required><br><br>
 
+        <button type="submit">Считать</button>
     </form>
 
     <script>
         'use strict';
-        function handleSubmit(evebt) {
-            event.preventDefault();
+        // Обработчик отправки формы
+        function handleSubmit(event) {
+            event.preventDefault(); // Предотвращаем перезагрузку страницы
             countCrows();
         }
+
         function countCrows() {
             const num = parseInt(document.getElementById("num").value);
 
@@ -55,4 +58,3 @@
 
 </body>
 </html>
-
