--- a/Lab1/Lab1_2.html
+++ b/Lab1/Lab1_2.html
@@ -17,9 +17,8 @@
 
     <script>
         'use strict';
-        // Обработчик отправки формы
         function handleSubmit(event) {
-            event.preventDefault(); // Предотвращаем перезагрузку страницы
+            event.preventDefault();
             countCrows();
         }
 
