--- a/Lab1/Lab1_4.html
+++ b/Lab1/Lab1_4.html
@@ -8,15 +8,21 @@
 
     <h1>Простые числа</h1>
 
-    <label for="n">Введите значение n:</label>
-    <input type="number" id="n" name="n" min="2" required><br><br>
+    <form id="primeForm" onsubmit="handleSubmit(event)">
+        <label for="n">Введите значение n:</label>
+        <input type="number" id="n" name="n" min="2" required><br><br>
 
-    <button type="button" onclick="findPrimes()">Найти</button><br><br>
+        <button type="submit">Найти</button><br><br>
+    </form>
 
     <div id="result"></div>
 
     <script>
         'use strict'; 
+        function handleSubmit(event) {
+            event.preventDefault();
+            findPrimes();
+        }
 
         function isPrime(num) {
             if (num <= 1) return false;
@@ -55,4 +61,3 @@
 
 </body>
 </html>
-
