--- a/Lab4/Lab4.html
+++ b/Lab4/Lab4.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab 4</title>
+    <title>Лабораторная 4</title>
 </head>
 <body>
-    <h1>Lab 4</h1>
-    <p>Open the console to see the results.</p>
+    <h1>Лабораторная 4</h1>
+    <p>Всё в консоли</p>
 
     <script src="lab4.js"></script>
 </body>
