--- a/Lab4/Lab4.html
+++ b/Lab4/Lab4.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Лабораторная 4</title>
+    <title>Навигация lab4</title>
+
+    
+
+
 </head>
+
 <body>
-    <h1>Лабораторная 4</h1>
-    <p>Всё в консоли</p>
+
+    <h1>Лабораторная работа 4</h1>
+    <hr>
+    <p style="text-align: center;">Результаты в консоли.
 
     <script src="lab4.js"></script>
+    
 </body>
+
 </html>
