--- a/Lab5/Lab5_3.html
+++ b/Lab5/Lab5_3.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-<div id="text">Текст.</div>
+<div id="text">Что-то интересное</div>
 <button id="toggleButton">Скрыть текст</button>
 
 <script>
