--- a/Lab5/Lab5_3.html
+++ b/Lab5/Lab5_3.html
@@ -12,6 +12,23 @@
             line-height: 1.2em;
             overflow: hidden;
         }
+        
+        #toggleButton {
+            padding: 10px 20px;
+            min-width: 150px;
+            text-align: center;
+            font-size: 16px;
+            cursor: pointer;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            transition: background-color 0.3s;
+        }
+        
+        #toggleButton:hover {
+            background-color: #45a049;
+        }
     </style>
 </head>
 <body>
